# file_sender

./: .gitignore  LICENSE  README.md
.github/workflows/: publish.yaml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf-nosu.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scoutfile.rs
