[package]
name = "scoutfile-sender"
version = "0.1.1"
description = "Monitor a file and send it to a remote server when it changes"
authors = ["ben@untan.gl"]
license = "MIT"
repository = "https://github.com/scienceuntangled/file_sender"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

base64 = "0.21.2"
chrono = "0.4"
lazy_static = "1.4.0"
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
once_cell = "1.18.0"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-js-set-interval = "1.3.0"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4"] }

[features]
hide-su-link = []
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
